# noder

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  wip_notes.md
.github/workflows/: pypi.yml  test-pypi.yml
cmake/: noderConfig.cmake.in
docs/: Doxyfile  conf.py  index.md
docs/api/: index.md
docs/api/cpp/: array.rst  arrayfactory.rst  data.rst  index.rst  io.rst  navigation.rst  node.rst  node_factory.rst  node_group.rst  utils.rst
docs/api/python/: array.rst  core_functions.rst  data.rst  factory.rst  index.rst  io.rst  navigation.rst  node.rst  node_group.rst  utils.rst
include/array/: array.hpp  array_numpy_bridge.hpp  assertions.hpp
include/array/factory/: c_to_py.hpp  matrices.hpp  strings.hpp  vectors.hpp
include/cgns/: base.hpp  tree.hpp  zone.hpp
include/data/: data.hpp  data_factory.hpp
include/io/: io.hpp  io_numpy.hpp
include/io/cgns/: node_pycgns_converter.hpp  node_pycgns_converter_pybind.hpp
include/io/hdf5/cgns/: cgns_io.hpp  node_pycgns_converter.hpp  node_pycgns_converter_pybind.hpp
include/io/yaml/: native_noder_yaml_io.hpp
include/node/: navigation.hpp  node.hpp  node_factory.hpp  node_group.hpp
include/utils/: comparator.hpp  data_types.hpp  pybind_dispatch.hpp  string.hpp  template_binder.hpp  template_instantiator.hpp
scripts/: Microsoft.PowerShell_profile.ps1  cpp_user_build_and_run.ps1  cpp_user_build_and_run.sh  gen_stubs.py  make_doc.sh  repair_macos_wheel.sh  setup_hdf5_windows.ps1
src/c++/: cgns_pybind.cpp  core_pybind.cpp
src/c++/array/: accessors.cpp  array.cpp  array_pybind.hpp  assertions.cpp  comparisons.cpp  modifiers.cpp  printer.cpp
src/c++/array/factory/: factory_pybind.hpp  matrices.cpp  matrices_pybind.hpp  strings.cpp  strings_pybind.hpp  vectors.cpp  vectors_pybind.hpp
src/c++/cgns/: base.cpp  base_pybind.hpp  cgns_pybind_utils.hpp  tree.cpp  tree_pybind.hpp  zone.cpp  zone_pybind.hpp
src/c++/data/: data_factory.cpp  data_pybind.hpp
src/c++/io/: io.cpp
src/c++/io/cgns/: node_pycgns_converter.cpp
src/c++/io/hdf5/cgns/: cgns_io.cpp  node_pycgns_converter.cpp
src/c++/io/hdf5/node/: native_noder_hdf5_io.cpp
src/c++/io/yaml/: native_noder_yaml_io.cpp
src/c++/node/: navigation.cpp  navigation_pybind.hpp  node.cpp  node_factory.cpp  node_group.cpp  node_group_pybind.hpp  node_pybind.hpp
src/c++/utils/: string.cpp
src/python/noder/: __init__.py  __init__.pyi  __main__.py  _cgns.pyi  cgns.py  cgns.pyi  core.pyi  io.pyi
tests/c++/: test_core_pybind.cpp
tests/c++/array/: test_array.cpp  test_array.hpp  test_array_data_accessors.cpp  test_array_data_accessors.hpp  test_array_data_accessors_pybind.hpp  test_array_pybind.hpp  test_assertions.cpp  test_assertions.hpp  test_assertions_pybind.hpp  test_comparisons.cpp  test_comparisons.hpp  test_comparisons_pybind.hpp  test_modifiers.cpp  test_modifiers.hpp  test_modifiers_pybind.hpp  test_printer.cpp
tests/c++/array/factory/: test_c_to_py.cpp  test_c_to_py.hpp  test_c_to_py_pybind.hpp  test_matrices.cpp  test_matrices.hpp  test_matrices_pybind.hpp  test_strings.cpp  test_vectors.cpp  test_vectors.hpp  test_vectors_pybind.hpp
tests/c++/cgns/: test_base_tree.cpp  test_base_tree.hpp  test_base_tree_pybind.hpp  test_zone.cpp  test_zone.hpp  test_zone_pybind.hpp
tests/c++/io/: test_io.hpp  test_yaml_io.hpp
tests/c++/node/: test_data.cpp  test_data.hpp  test_data_pybind.hpp  test_navigation.cpp  test_navigation.hpp  test_navigation_pybind.hpp  test_node.cpp  test_node.hpp  test_node_factory.cpp  test_node_factory.hpp  test_node_factory_pybind.hpp  test_node_group.cpp  test_node_group.hpp  test_node_group_pybind.hpp  test_node_pybind.hpp
tests/c++/utils/: test_utils.cpp  test_utils.hpp  test_utils_pybind.hpp
tests/python/: test_cmake_helpers.py
tests/python/array/: test_array.py  test_array_cpp.py  test_data_types.py
tests/python/array/factory/: test_c_to_py_cpp.py
tests/python/cgns/: test_base_tree.py  test_base_tree_cpp.py  test_zone.py  test_zone_cpp.py
tests/python/io/: test_hdf5_runtime_compatibility.py  test_io.py  test_node_pycgns.py  test_yaml_io.py  test_yaml_io_cpp.py
tests/python/node/: test_data.py  test_data_cpp.py  test_navigation.py  test_navigation_cpp.py  test_node.py  test_node_cpp.py  test_node_factory.py  test_node_factory_cpp.py  test_node_group.py  test_node_group_cpp.py
tests/python/treelab_legacy/: __init__.py  legacy_cgns.py  test_node.py  test_tree.py  test_utils.py  test_zone.py
tests/python/utils/: test_utils_cpp.py
